Pass all 14 tests in 6.31sec with 56.28% coverage
WIP

Refactor a bit the patm.modeling.persistence module

WIP 2 failed, 7 passed, 3 error, 52.42% coverage

WIP 11 passed, 1 error, 54.72% coverage

WIP 2 failed, 8 passed, 2 error, 54.23% coverage

WIP 1 failed, 11 passed

WIP 1 failed, 11 passed

WIP 1 failed, 11 passed

WIP 1 failed, 11 passed

WIP 1 failed, 11 passed, 55.54% coverage

WIP 1 failed, 11 passed, 55.60% coverage

WIP 1 failed, 11 passed, 55.60% coverage

WIP 1 failed, 11 passed, 55.62% coverage

WIP 1 failed, 11 passed, 55.65% coverage

WIP 1 failed, 11 passed, 55.64% coverage

WIP 1 failed, 11 passed, 55.64% coverage

WIP 1 failed, 11 passed, 55.64% coverage

WIP 1 failed, 11 passed, 55.71% coverage

WIP 1 failed, 11 passed, 55.72% coverage

WIP 1 failed, 11 passed, 55.74% coverage

WIP 1 failed, 11 passed, 55.79% coverage

WIP 1 failed, 11 passed, 55.78% coverage

WIP 1 failed, 11 passed, 55.83% coverage

WIP 1 failed, 11 passed, 55.89% coverage

WIP 1 failed, 11 passed, 55.91% coverage

WIP 1 failed, 11 passed, 55.92% coverage

WIP 1 failed, 11 passed, 56.01% coverage

WIP 1 failed, 11 passed in 5.44sec with 56.01% coverage

WIP 1 failed, 11 passed in 5.22sec with 55.90% coverage

WIP 1 failed, 11 passed in 5.13sec with 55.88% coverage

WIP 1 failed, 11 passed in 5.21sec with 55.88% coverage

WIP 1 failed, 11 passed in 5.12sec with 55.88% coverage

WIP 2 failed, 9 passed 1 error, in 5.87sec with 54.03% coverage

WIP 1 failed, 10 passed 1 error, in 5.86sec with 54.43% coverage

WIP 1 failed, 10 passed 1 error

WIP 1 failed, 10 passed 1 error

WIP 1 failed, 10 passed 1 error

WIP 1 failed, 10 passed 1 error

WIP 11 passed 1 error

WIP 1 failed 11 passed

WIP 1 failed 11 passed

WIP 1 failed 11 passed. TODO load results on experiment so that there is not dependency when loading data suck as final topics tokens

WIP 12 passed in 5.37sec with 55.75% coverage

11 passed

Clean code, 11 passed

WIP 12 passed in 5.74sec with 56.19% coverage

WIP 14 passed

--- a/patmtk/tests/test-train.cfg
+++ b/patmtk/tests/test-train.cfg
@@ -61,7 +61,7 @@ top-tokens-100 = tt100
 # Computes KL - divergence between p(topic) and p(topic|word) distributions \mathrm{KL}(p(t) | | p(t | w)) (or vice versa)
 # for each token and counts the part of tokens that have this value greater than the given (non-negative) delta_threshold.
 # Such tokens are considered to be background ones.
-background-tokens-ratio-0.3 = btr
+background-tokens-ratio-0.3 = btr0
 background-tokens-ratio-0.2 = btr1
 
 items-processed =
