[NEW] Cross python (2 and 3) compatible codebase (except for module graph_builder.py which is python3-only, because of easyplot dependency), passing 17 unittests with 72% coverage. [FIX] logic of SteadyTrackedItems creation from dict to store background tokens matching the maximum threshold defined in case of multiple found. TODO allow storing tokens for all thresholds, similarly to 'topic-kernel' and 'top-tokens' scores. Update tests/conftest.py and account for slightly different cooc and pmi pairs created between python2 and python3 invocations, by implemeting a fixture that checks python interpreter version at runtime.
[NEW] Python 2 and 3 supporte for reduce and configparser

Make import statements relative, remove a __slots__ declaration and usage of an Abstract class infra in processors

Achieve corret logic when using list, map, comprehensions

Transform a list coprehension in Tuner._check_parameters

Do not encode read sections from cfg. Applies when calling the patm.utils.cfg2model_settings function

Make remaining print statements in processors/processor.py, report_datasets.py, train.py and transform.py a function

Update the requirements file

[FIX] logic of SteadyTrackedItems creation from dict to store background tokens matching the maximum threshold defined in case of multiple found. TODO allow storing tokens for all thresholds, similarly to 'topic-kernel' and 'top-tokens' scores.

Update tests/conftest.py and account for slightly different cooc and pmi pairs created between python2 and python3 invocations, by implemeting a fixture that checks python interpreter version at runtime.

Remove unsused import statement

Wrap lemmatization callback with an exception when input is of wrong type

[NEW] Stable: all 17 unittests passing with 72% coverage. Cross python (2 and 3) compatible codebase (except for module graph_builder.py which is python3-only, because of easyplot dependency)

--- a/patmtk/requirements.txt
+++ b/patmtk/requirements.txt
@@ -1,5 +1,12 @@
+in_place
 tqdm
-artm
-easyplot
+gensim
 matplotlib
 numpy
+attrs
+future
+nltk
+click
+pattern  # only used to support the lemmatization feature during preprocessing. takes around 65 MB in a venv
+
+easyplot
