Report the resulting document distributions depending on the underlying classes (discreetization/binning of the ideological consistency axis). transform.py supports runtime discreetization optimization. Add datasets reporting tests. Fix file writting encoding mess with bytes and str for python3. Create regression tests based on the 'megadata' dataset. Add infrastructure allowing live training model of a model to undergo regression testing. Add KL distances computer unittests. State of regression.cfg should be able to replicate training a model (on megadata dataset) that results in p(c|t) distributions, such that the KL distances agree with the relative position of each ideology class c on the ideological consistency scale (liberal --> conservative scale). Change signature for building graphs, allowing oncce again to include legend information in graph images created. NOTE: easyplot module has a bug when invoked from python3 and when requesting the inclusion of legend. Legend requesting works on python2. Support regularizers' coefficient trajectory for training or tuning.
WIP

Add infrastructure for Population and DiscreetizationScheme infra. Rename the legacy 6-class discreetization scheme so that spaces ' ' become underscores '_'

Allow passing a list of file_paths (a path per BaseDiskWriter found in the pipeline under usage) as a key argument in initialize exposed callback of the pipeline class. Use accordingly in Pipehandler.preprocess method

Change PipeHandler constructor signature; strip arguments

Implement python 2.5 and above compatible functionality for creating parent dir for a BaseDiskWriter when initialized

WIP Passing 2n3

Utilize labels_hash and class_names arguments for pipe_handler at runtime when calling preprocess

WIP Passing 2n3

WIP, passing 2n3

Split text processing from text dumping and dataset/collection directory and files creation. All pytohn2n3 passing

WIP, passing 2n3

WIP, passing all python 2n3

WIP transform interface. Passing all


--- a/patmtk/requirements.txt
+++ b/patmtk/requirements.txt
@@ -9,4 +9,9 @@ nltk
 click
 pattern  # only used to support the lemmatization feature during preprocessing. takes around 65 MB in a venv
 
+# for the transform.py interface
+PyInquirer
+prompt-toolkit==1.0.14  # fixed requirement of PyInquirer !
+
+# for the python3 only feature of graph building
 easyplot
