--- a/patmtk/tests/test-train.cfg
+++ b/patmtk/tests/test-train.cfg
@@ -1,6 +1,6 @@
 [learning]
 nb_topics = 20
-collection_passes = 100
+collection_passes = 10
 document_passes = 1
 
 [information]
@@ -14,21 +14,23 @@ default-class-weight = 1
 ideology-class-weight = 10
 
 [regularizers]
-sparse-phi = 
 smooth-phi = smp
-sparse-theta = 
 smooth-theta = smt
+sparse-phi =
+sparse-theta =
 
 # Smooth Psi distributions
 smooth-phi-dom-cls = sp-dc
 smooth-phi-bac-cls =
-smooth-phi-cls = 
+smooth-phi-cls =
 
-label-regularization-phi-dom-all = 
-label-regularization-phi-dom-cls = 
-label-regularization-phi = 
 decorrelate-phi-dom-def = d_p-dd
-decorrelate-phi-background = 
+label-regularization-phi-dom-cls = lrpdc
+
+label-regularization-phi-dom-all =
+
+label-regularization-phi =
+decorrelate-phi-background =
 decorrelate-phi-def =
 decorrelate-phi-class = 
 
