--- a/patmtk/tests/regression.cfg
+++ b/patmtk/tests/regression.cfg
@@ -1,18 +1,18 @@
 [learning]
-nb_topics = 20
-collection_passes = 100
-document_passes = 10
+nb_topics = 40
+collection_passes = 10
+document_passes = 1
 
 [information]
 background-topics-percentage = 0.2
 
 default-class-weight = 1
-ideology-class-weight = 10
+ideology-class-weight = 1
 
 [regularizers]
 smooth-phi = smp
 smooth-theta = smt
-decorrelate-phi-dom-def = d_p-dd
+decorrelate-phi-dom-def =
 # CDTW (author topic) model
 label-regularization-phi-dom-cls = lrpdc
 # Smooth Psi distributions
