Update README with installation instructions and provide build_artm.sh script.
Add codecov execution on travis

Finalize README

Write installation steps in README and enrich features of build_artm.sh script

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ jobs:
     env: TOXENV=clean,check
   - stage: Build_n_test
     python: '3.6'
-    env: TOXENV=py36
+    env: TOXENV=py36,codecov
     install:
       - .travis/build-n-wheel.sh 3 6
       - export BIGARTM_WHEEL=$(.travis/select-wheel.sh 3 6)
