--- a/tox.ini
+++ b/tox.ini
@@ -63,6 +63,12 @@ commands =
     check-manifest {toxinidir}
 
 
+[testenv:codecov]
+deps = codecov>=1.4.0
+skip_install = true
+commands = codecov []
+
+
 [testenv:py27]
 basepython = {env:TOXPYTHON:python2.7}
 usedevelop = true
@@ -70,7 +76,7 @@ deps =
     pytest
     pytest-cov
     setuptools>=40.0.0
-    -r .travis/requirements
+    -r.travis/requirements.txt
 commands_pre =
     pip install {env:BIGARTM_WHEEL:}
     python -c 'import nltk; nltk.download("stopwords"); nltk.download("punkt"); nltk.download("wordnet");'
